--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: 500px;
 	grid-gap: 20px;
-  }
+}
 .proyectoMain{
 	background-color: #126782;
 	color: azure;
@@ -128,4 +128,14 @@ header nav a.activo {
 	border: solid #AAA 1px;
 	padding: 20px;
 	margin-top: 5%;
+}
+footer{
+	background-color: #000;
+}
+.ficha{
+	margin: auto;
+	border-radius: 25px;
+	background-color: rgb(192, 183, 183);
+	width: 75%;
+	padding: 5%;
 }
